# prettytendr

./: .gitignore  README.md  astro.config.mjs  initialize.js  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
.github/workflows/: deploy.yml
contracts/beauty_profile/: Cargo.toml
contracts/beauty_profile/src/: lib.rs  test.rs
contracts/beauty_profile/test_snapshots/test/: test_complete_profile.1.json  test_complete_profile_already_completed.1.json
contracts/increment/src/: lib.rs  test.rs
contracts/increment/test_snapshots/test/: increment.1.json  test.1.json
src/: env.d.ts  utils.ts
src/components/: BeautyProfileForm.tsx  Button.tsx  ConnectFreighter.astro  Counter.astro  FreighterConnectButton.tsx  LoadingIndicator.tsx  Message.tsx  Nav.astro  NavReact.tsx  RewardCard.astro  form.css  nav.css  trustlineForm.tsx
src/context/: FreigterContext.tsx
src/contracts/: beauty_profile.ts  hello_world.ts  soroban_increment_contract.ts
src/hooks/: checkTrustline.ts
src/layouts/: Layout.astro
src/pages/: beautyprofile.astro  createtrustline.astro  earn.astro  exchange.astro  index.astro
src/pages/api/: create-trustline.ts  reward-user.ts
src/services/: rewardListener.ts
src/store/: loadingStore.ts  message.ts  wallet.ts
