[package]
name = "beauty_profile"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
sha2 = "0.10"  # Or the latest version

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
